fix: Fix Table.jsx layout issues and hover states
Fixed RoleCell component and replace modal container inputs with compone
nts. Also minor global variables typo correction.

- Table.jsx cells hover state
- Modal container inputs replaced
- Global variables repeated words correction

See #116

--- a/Frontend/src/components/Table/Table.css
+++ b/Frontend/src/components/Table/Table.css
@@ -93,11 +93,12 @@ td button {
 
 td button:hover {
 	background: #f56f10;
-	color: #ffffff;
+	stroke: #ffffff;
+	fill: white;
 }
 
 td span {
-	width: 180px;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -105,15 +106,13 @@ td span {
 	background-color: #f56f10;
 	color: #ffffff;
 	padding: 10px 20px;
-	border-radius: 50px;
+	border-radius: var(--radius-sm);
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
 
 td span .role-name {
-	flex-shrink: 1;
-	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	font-weight: bold;
